--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "^1.10.0",
+    "numeral": "^2.0.6",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-icons": "3.4.0",
